Ordnerstruktur bisschen umsortiert bezüglich der subpages. Mailadresse aktualisiert. Kontaktformular auskommentiert.

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -9,23 +9,25 @@
     </title>
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans|Roboto:900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/CSS/burger.css">
-    <link rel="stylesheet" href="assets/CSS/text-flex.css">
-    <link rel="stylesheet" href="assets/CSS/styles.css">
+    <link rel="stylesheet" href="../assets/CSS/burger.css">
+    <link rel="stylesheet" href="../assets/CSS/text-flex.css">
+    <link rel="stylesheet" href="../assets/CSS/styles.css">
 </head>
 
 <body class="flex flex-column">
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="assets/img/logo/N_Segno_Initialen.svg">
+                <img src="../assets/img/logo/N_Segno_Initialen.svg">
             </a>
         </div>
-        <div><h1>Aus der Asche - eine Feueroper</h1></div>
-        
+        <div>
+            <h1>Aus der Asche - eine Feueroper</h1>
+        </div>
+
     </div>
     <header>
-        
+
         <input id="burger" type="checkbox" />
 
         <label for="burger">
@@ -38,11 +40,11 @@
             <div class="hidetext"></div>
             <ul>
                 <li><a href="/">start</a></li>
-                <li><a href="01_ueber_uns.html">über uns</a></li>
-                <li><a href="02_aus-der-asche.html">Aus der Asche - eine Feueroper</a></li>
-                <li><a href="03_kontakt.html">kontakt</a></li>
-                <li><a href="04_datenschutz.html">datenschutzerklärung</a></li>
-                <li><a href="05_impressum.html">impressum</a></li>
+                <li><a href="/ueber">über uns</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/kontakt">kontakt</a></li>
+                <li><a href="/datenschutz">datenschutzerklärung</a></li>
+                <li><a href="/impressum">impressum</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +55,7 @@
 
             <article class="flex flex-row flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
-                    <img title="Aus der Asche Artwork" alt="Aus der Asche Artwork" src="assets/img/fotos/Aus-der-Asche.jpg">
+                    <img title="Aus der Asche Artwork" alt="Aus der Asche Artwork" src="../assets/img/fotos/Aus-der-Asche.jpg">
                 </div>
                 <div class="col-txt">
                     <section>
@@ -69,11 +71,11 @@
             <article class="flex flex-row-rev flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img flex flex-wrap flex-justify-evenly">
                     <figure class="col-img">
-                        <img title="Zeus und Hera" alt="Zeus und Hera" src="assets/img/fotos/Gottheiten.JPG">
+                        <img title="Zeus und Hera" alt="Zeus und Hera" src="../assets/img/fotos/Gottheiten.JPG">
                         <figcaption>Zeus und Hera, das Götterpaar </figcaption>
                     </figure>
                     <figure class="col-img">
-                        <img title="Eine der Schicksalsschwestern" alt="Eine der Schicksalsschwestern" src="assets/img/fotos/Schicksalsschwestern.JPG">
+                        <img title="Eine der Schicksalsschwestern" alt="Eine der Schicksalsschwestern" src="../assets/img/fotos/Schicksalsschwestern.JPG">
                         <figcaption>Die Schicksalsschwestern verlesen die Zukunft </figcaption>
                     </figure>
                 </div>
@@ -94,11 +96,11 @@
             <article class="flex flex-row flex-justify-evenly flex-wrap flex-align-center">
                 <div class="col-img flex flex-wrap flex-justify-evenly">
                     <figure class="col-img">
-                        <img title="Aeneas" alt="Aeneas" src="assets/img/fotos/Aeneas.JPG">
+                        <img title="Aeneas" alt="Aeneas" src="../assets/img/fotos/Aeneas.JPG">
                         <figcaption>Aeneas, Überlebender des trojanischen Krieges</figcaption>
                     </figure>
                     <figure class="col-img">
-                        <img title="Dido" alt="Dido" src="assets/img/fotos/Dido.JPG" style="transform: scalex(-1)">
+                        <img title="Dido" alt="Dido" src="../assets/img/fotos/Dido.JPG" style="transform: scalex(-1)">
                         <figcaption>Dido, Herrscherin Karthagos</figcaption>
                     </figure>
                 </div>
@@ -106,28 +108,27 @@
 
             </article>
         </div>
-<hr>
+        <hr>
     </main>
     <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
             <a target="_blank" tag="fb-social-icon" href="">
-                <img class="social-icons" title="facebook-social-icon" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-White_72.png">
+                <img class="social-icons" title="facebook-social-icon" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-White_72.png">
             </a>
             <a target="_blank" tag="yt-social-icon" href="">
-                <img class="social-icons" title="youtube-social-icon" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
+                <img class="social-icons" title="youtube-social-icon" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
             </a>
             <a target="_blank" tag="ig-social-icon" href="">
-                <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
+                <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
             </a>
         </div>
         <div class="imprint flex flex-row flex-justify-content text-uppercase text-letterspace flex-wrap">
             <p>Theater zur blauen Stunde e.V. <span class="text-lowercase">c/o</span> Julian Allescher</p>
             <p>Kiefholzstraße 188</p>
             <p>12437 Berlin</p>
-            <p><a href="mailto:feuertheater.berlin@gmail.com">feuertheater.berlin@gmail.com</a></p>
-            <p><a href="04_datenschutz.html">Datenschutzerklärung</a></p>
-            <p><a href="05_impressum.html">Impressum</a></p>
-
+            <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
+            <p><a href="/datenschutz">Datenschutzerklärung</a></p>
+            <p><a href="/impressum">Impressum</a></p>
         </div>
 
     </footer>
