--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -9,24 +9,26 @@
     </title>
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans|Roboto:900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/CSS/burger.css">
-    <link rel="stylesheet" href="assets/CSS/text-flex.css">
-    <link rel="stylesheet" href="assets/CSS/styles.css">
+    <link rel="stylesheet" href="../assets/CSS/burger.css">
+    <link rel="stylesheet" href="../assets/CSS/text-flex.css">
+    <link rel="stylesheet" href="../assets/CSS/styles.css">
 </head>
 
 <body class="flex flex-column">
     <div class="flex flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="assets/img/logo/N_Segno_Initialen.svg">
+                <img src="../assets/img/logo/N_Segno_Initialen.svg">
             </a>
         </div>
-        <div><h1><span class="mobile">Datenschutz-<br>erklärung</span>
-                    <span class="desktop">Datenschutzerklärung</span>
-            </h1></div>
+        <div>
+            <h1><span class="mobile">Datenschutz-<br>erklärung</span>
+                <span class="desktop">Datenschutzerklärung</span>
+            </h1>
+        </div>
     </div>
     <header>
-        
+
         <input id="burger" type="checkbox" />
 
         <label for="burger">
@@ -39,11 +41,11 @@
             <div class="hidetext"></div>
             <ul>
                 <li><a href="/">start</a></li>
-                <li><a href="01_ueber_uns.html">über uns</a></li>
-                <li><a href="02_aus-der-asche.html">Aus der Asche - eine Feueroper</a></li>
-                <li><a href="03_kontakt.html">kontakt</a></li>
-                <li><a href="04_datenschutz.html">datenschutzerklärung</a></li>
-                <li><a href="05_impressum.html">impressum</a></li>
+                <li><a href="/ueber">über uns</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/kontakt">kontakt</a></li>
+                <li><a href="/datenschutz">datenschutzerklärung</a></li>
+                <li><a href="/impressum">impressum</a></li>
             </ul>
         </nav>
     </header>
@@ -109,29 +111,32 @@
             <p>Einzelheiten über Google Web Fonts finden Sie unter: <a href="https://www.google.com/fonts#AboutPlace:about">https://www.google.com/fonts#AboutPlace:about</a> und weitere Informationen in den Datenschutzbestimmungen von Google: <a href="https://policies.google.com/privacy/partners?hl=de">https://policies.google.com/privacy/partners?hl=de</a></p>
             <p><small>Quelle: Datenschutz-Konfigurator von <a href="http://www.mein-datenschutzbeauftragter.de" target="_blank">mein-datenschutzbeauftragter.de</a></small></p>
         </article>
-    <hr>
+        <hr>
     </main>
     <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
             <a target="_blank" tag="fb-social-icon" href="">
-                <img class="social-icons" title="facebook-social-icon" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-White_72.png">
+                <img class="social-icons" title="facebook-social-icon" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-White_72.png">
             </a>
             <a target="_blank" tag="yt-social-icon" href="">
-                <img class="social-icons" title="youtube-social-icon" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
+                <img class="social-icons" title="youtube-social-icon" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
             </a>
             <a target="_blank" tag="ig-social-icon" href="">
-                <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
+                <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
             </a>
         </div>
         <div class="imprint flex flex-row flex-justify-content text-uppercase text-letterspace flex-wrap">
             <p>Theater zur blauen Stunde e.V. <span class="text-lowercase">c/o</span> Julian Allescher</p>
             <p>Kiefholzstraße 188</p>
             <p>12437 Berlin</p>
-            <p><a href="mailto:feuertheater.berlin@gmail.com">feuertheater.berlin@gmail.com</a></p>
-            <p><a href="04_datenschutz.html">Datenschutzerklärung</a></p>
-            <p><a href="05_impressum.html">Impressum</a></p>
+            <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
+            <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
+            <p><a href="/datenschutz">Datenschutzerklärung</a></p>
+            <p><a href="/impressum">Impressum</a></p>
 
         </div>
 
     </footer>
-</body></html>
+</body>
+
+</html>
