--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             <div class="hidetext"></div>
             <ul>
                 <li><a href="/">start</a></li>
-                <li><a href="01_ueber_uns.html">über uns</a></li>
-                <li><a href="02_aus-der-asche.html">Aus der Asche - eine Feueroper</a></li>
-                <li><a href="03_kontakt.html">kontakt</a></li>
-                <li><a href="04_datenschutz.html">datenschutzerklärung</a></li>
-                <li><a href="05_impressum.html">impressum</a></li>
+                <li><a href="/ueber">über uns</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/kontakt">kontakt</a></li>
+                <li><a href="/datenschutz">datenschutzerklärung</a></li>
+                <li><a href="/impressum">impressum</a></li>
             </ul>
         </nav>
     </header>
@@ -49,8 +49,8 @@
                      src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png"
                      srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
                 <div class="cta-btns flex flex-column">
-                    <a href="02_aus-der-asche.html" class="btn text-uppercase text-c">Trailer ansehen</a>
-                    <a href="01_ueber_uns.html" class="btn text-uppercase text-c">Wer wir sind</a>
+                    <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer ansehen</a>
+                    <a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>
                 </div>
             </div>
 
@@ -59,10 +59,11 @@
     
 
         <video playsinline autoplay muted loop poster="assets/img/fotos/Zeus-Hera.jpg" id="bgvid" class="desktop">
+            <!--DESKTOP-->
+            <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mp4" type="video/mp4" media="(min-width:1024px)">
             <!--MOBILE-->
             <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type="video/mp4" media="(max-width:480px)">
-            <!--DESKTOP-->
-            <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mp4" type="video/mp4" media="(min-width:1024px)">-->
+            
         </video>
 
 
@@ -86,9 +87,9 @@
                 <p class="anschrift">12437 Berlin</p>
             </div>
             <div class="flex flex-row flex-wrap">
-                <p><a href="mailto:feuertheater.berlin@gmail.com">feuertheater.berlin@gmail.com</a></p>
-                <p><a href="04_datenschutz.html">Datenschutzerklärung</a></p>
-                <p><a href="05_impressum.html">Impressum</a></p>
+                <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
+                <p><a href="/datenschutz">Datenschutzerklärung</a></p>
+                <p><a href="/impressum">Impressum</a></p>
             </div>
 
 
