--- a/ueber/index.html
+++ b/ueber/index.html
@@ -9,16 +9,17 @@
     </title>
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans|Roboto:900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/CSS/burger.css">
-    <link rel="stylesheet" href="assets/CSS/text-flex.css">
-    <link rel="stylesheet" href="assets/CSS/styles.css">
+    <link rel="stylesheet" href="../assets/CSS/burger.css">
+    <link rel="stylesheet" href="../assets/CSS/text-flex.css">
+    <link rel="stylesheet" href="../assets/CSS/styles.css">
+    
 </head>
 
 <body class="flex flex-column">
     <div class="flex flex-row flex-align-center">
         <div class="small-logo">
             <a href="/">
-                <img src="assets/img/logo/N_Segno_Initialen.svg">
+                <img src="../assets/img/logo/N_Segno_Initialen.svg">
             </a>
         </div>
         <div>
@@ -39,11 +40,11 @@
             <div class="hidetext"></div>
             <ul>
                 <li><a href="/">start</a></li>
-                <li><a href="01_ueber_uns.html">über uns</a></li>
-                <li><a href="02_aus-der-asche.html">Aus der Asche - eine Feueroper</a></li>
-                <li><a href="03_kontakt.html">kontakt</a></li>
-                <li><a href="04_datenschutz.html">datenschutzerklärung</a></li>
-                <li><a href="05_impressum.html">impressum</a></li>
+                <li><a href="/ueber">über uns</a></li>
+                <li><a href="/aus-der-asche">Aus der Asche - eine Feueroper</a></li>
+                <li><a href="/kontakt">kontakt</a></li>
+                <li><a href="/datenschutz">datenschutzerklärung</a></li>
+                <li><a href="/impressum">impressum</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +52,7 @@
         <div class="container flex flex-justify-center flex-align-center flex-wrap">
             <article class="flex flex-row-rev flex-align-start flex-justify-center flex-wrap">
                 <div class="col-img">
-                    <img class="teaser-screenshot" title="Unterweltwesen aus dem 'Aus der Asche'-Trailer" alt="Unterweltwesen aus dem 'Aus der Asche'-Trailer" src="assets/img/fotos/Unterwelt_1.52.1.jpg">
+                    <img class="teaser-screenshot" title="Unterweltwesen aus dem 'Aus der Asche'-Trailer" alt="Unterweltwesen aus dem 'Aus der Asche'-Trailer" src="../assets/img/fotos/Unterwelt_1.52.1.jpg">
                 </div>
                 <div class="col-txt">
                     <section>
@@ -60,7 +61,7 @@
                             <br>Die Tätigkeit im Verein soll erfahrbar machen, dass bedeutsame Werke der Kunst und Kultur auch ohne kommerzielle Beweggründe von Menschen für Menschen geschaffen werden können.
                         </p>
                         <div class="flex flex-row flex-justify-end">
-                            <a class="btn text-uppercase" tag="projects" href="03_kontakt.html">Mitmachen!</a>
+                            <a class="btn text-uppercase" tag="projects" href="/kontakt">Mitmachen!</a>
                         </div>
                     </section>
 
@@ -69,7 +70,7 @@
             <hr>
             <article class="flex flex-row flex-align-center flex-justify-center flex-wrap">
                 <div class="col-img">
-                    <img class="teaser-screenshot" title="Unterweltwesen aus dem 'Aus der Asche'-Trailer" alt="Unterweltwesen aus dem 'Aus der Asche'-Trailer" src="assets/img/fotos/Unterwelt_1.25.2.jpg">
+                    <img class="teaser-screenshot" title="Unterweltwesen aus dem 'Aus der Asche'-Trailer" alt="Unterweltwesen aus dem 'Aus der Asche'-Trailer" src="../assets/img/fotos/Unterwelt_1.25.2.jpg">
                 </div>
                 <div class="col-txt">
                     <section>
@@ -78,7 +79,7 @@
                             <br> Nachdem wir bereits im November 2019 eine kleine Testaufführung vor Freunden und Familie auf die Beine stellen konnten, peilen wir eine große Aufführung im Sommer 2020 an.
                         </p>
                         <div class="flex flex-row flex-justify-end">
-                            <a class="btn text-uppercase" tag="projects" href="02_aus-der-asche.html">Mehr über das Projekt</a>
+                            <a class="btn text-uppercase" tag="projects" href="/aus-der-asche">Mehr über das Projekt</a>
                         </div>
                     </section>
 
@@ -90,22 +91,22 @@
     <footer class="flex flex-column flex-align-center">
         <div class="icon-bar">
             <a target="_blank" tag="fb-social-icon" href="">
-                <img class="social-icons" title="facebook-social-icon" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-White_72.png">
+                <img class="social-icons" title="facebook-social-icon" alt="facebook-social-icon" src="../assets/img/facebook/f_logo_RGB-White_72.png">
             </a>
             <a target="_blank" tag="yt-social-icon" href="">
-                <img class="social-icons" title="youtube-social-icon" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
+                <img class="social-icons" title="youtube-social-icon" alt="youtube-social-icon" src="../assets/img/youtube/yt_icon_mono_dark.png">
             </a>
             <a target="_blank" tag="ig-social-icon" href="">
-                <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
+                <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
             </a>
         </div>
         <div class="imprint flex flex-row flex-justify-content text-uppercase text-letterspace flex-wrap">
             <p>Theater zur blauen Stunde e.V. <span class="text-lowercase">c/o</span> Julian Allescher</p>
             <p>Kiefholzstraße 188</p>
             <p>12437 Berlin</p>
-            <p><a href="mailto:feuertheater.berlin@gmail.com">feuertheater.berlin@gmail.com</a></p>
-            <p><a href="04_datenschutz.html">Datenschutzerklärung</a></p>
-            <p><a href="05_impressum.html">Impressum</a></p>
+            <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
+            <p><a href="/datenschutz">Datenschutzerklärung</a></p>
+            <p><a href="/impressum">Impressum</a></p>
 
         </div>
 
