--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <link rel="stylesheet" href="assets/CSS/burger.css">
     <link rel="stylesheet" href="assets/CSS/text-flex.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="segno.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="segno.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="segno.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="segno.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="segno.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="segno.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="segno.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="segno.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="segno.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="segno.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="segno.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="segno.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="segno.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="segno.ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -45,9 +63,7 @@
         <div class="start flex flex-justify-center flex-align-center">
             <div class="overlay"></div>
             <div class="logo-grp flex flex-column flex-align-center flex-justify-center">
-                <img class="logo" alt="Theater zur blauen Stunde (Logo)"
-                     src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png"
-                     srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
+                <img class="logo" alt="Theater zur blauen Stunde (Logo)" src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png" srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
                 <div class="cta-btns flex flex-column">
                     <a href="/aus-der-asche" class="btn text-uppercase text-c">Trailer ansehen</a>
                     <a href="/ueber" class="btn text-uppercase text-c">Wer wir sind</a>
@@ -56,14 +72,14 @@
 
         </div>
         <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera_LQ.jpg">
-    
+
 
         <video playsinline autoplay muted loop poster="assets/img/fotos/Zeus-Hera.jpg" id="bgvid" class="desktop">
             <!--DESKTOP-->
             <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mp4" type="video/mp4" media="(min-width:1024px)">
             <!--MOBILE-->
             <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type="video/mp4" media="(max-width:480px)">
-            
+
         </video>
 
 
@@ -95,4 +111,6 @@
 
         </div>
     </footer>
-</body></html>
+</body>
+
+</html>
