--- a/ueber/index.html
+++ b/ueber/index.html
@@ -13,6 +13,27 @@
     <link rel="stylesheet" href="../assets/CSS/text-flex.css">
     <link rel="stylesheet" href="../assets/CSS/styles.css">
     
+    <link rel="stylesheet" href="assets/CSS/burger.css">
+    <link rel="stylesheet" href="assets/CSS/text-flex.css">
+    <link rel="stylesheet" href="assets/CSS/styles.css">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="../segno.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="../segno.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="../segno.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../segno.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="../segno.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="../segno.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="../segno.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="../segno.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../segno.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../segno.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../segno.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../segno.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../segno.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="../segno.ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="flex flex-column">
