Footeranpassung für Mobile Devices.

--- a/aus-der-asche/index.html
+++ b/aus-der-asche/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/CSS/burger.css">
     <link rel="stylesheet" href="../assets/CSS/text-flex.css">
     <link rel="stylesheet" href="../assets/CSS/styles.css">
-    
+
     <link rel="stylesheet" href="assets/CSS/burger.css">
     <link rel="stylesheet" href="assets/CSS/text-flex.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
@@ -149,8 +149,8 @@
             <p>Kiefholzstraße 188</p>
             <p>12437 Berlin</p>
             <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
-            <p><a href="/datenschutz">Datenschutzerklärung</a></p>
-            <p><a href="/impressum">Impressum</a></p>
+            <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
+            <p class="impressum"><a href="/impressum">Impressum</a></p>
         </div>
 
     </footer>
