--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             </div>
             <div class="flex flex-row flex-wrap">
                 <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
-                <p><a href="/datenschutz">Datenschutzerklärung</a></p>
-                <p><a href="/impressum">Impressum</a></p>
+                <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
+                <p class="impressum"><a href="/impressum">Impressum</a></p>
             </div>
 
 
