--- a/ueber/index.html
+++ b/ueber/index.html
@@ -126,8 +126,8 @@
             <p>Kiefholzstraße 188</p>
             <p>12437 Berlin</p>
             <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
-            <p><a href="/datenschutz">Datenschutzerklärung</a></p>
-            <p><a href="/impressum">Impressum</a></p>
+            <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
+                <p class="impressum"><a href="/impressum">Impressum</a></p>
 
         </div>
 
