--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body class="start">
     <div class="flex flex-align-center">
 
         <h1 class="start">Theater zur blauen Stunde e.V.</h1>
