Änderungen im <video>-tag. Geht jetzt hoffentlich auf iOS.

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -107,14 +107,17 @@
                 <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="../assets/img/instagram/IG_Glyph_white.png">
             </a>
         </div>
-        <div class="imprint flex flex-row flex-justify-content text-uppercase text-letterspace flex-wrap">
-            <p>Theater zur blauen Stunde e.V. <span class="text-lowercase">c/o</span> Julian Allescher</p>
-            <p>Kiefholzstraße 188</p>
-            <p>12437 Berlin</p>
-            <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
-            <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
-            <p class="impressum"><a href="/impressum">Impressum</a></p>
-
+        <div class="imprint flex flex-row flex-justify-center text-uppercase text-letterspace flex-wrap">
+            <div class="flex flex-row flex-wrap">
+                <p class="anschrift">Theater zur blauen Stunde e.V. <span class="text-lowercase">c/o</span> Julian Allescher</p>
+                <p class="anschrift">Kiefholzstraße 188</p>
+                <p class="anschrift">12437 Berlin</p>
+            </div>
+            <div class="flex flex-row flex-wrap">
+                <p><a href="mailto:mail@blauestunde.theater">mail@blauestunde.theater</a></p>
+                <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
+                <p class="impressum"><a href="/impressum">Impressum</a></p>
+            </div>
         </div>
 
     </footer>
