--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera_LQ.jpg">
 
 
-        <video playsinline autoplay muted loop poster="assets/img/fotos/Zeus-Hera.jpg" id="bgvid" class="desktop">
+        <video playsinline autoplay muted loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop" controls="true">
             <!--DESKTOP-->
             <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mp4" type="video/mp4" media="(min-width:1024px)">
             <!--MOBILE-->
@@ -107,8 +107,6 @@
                 <p class="datenschutz"><a href="/datenschutz">Datenschutzerklärung</a></p>
                 <p class="impressum"><a href="/impressum">Impressum</a></p>
             </div>
-
-
         </div>
     </footer>
 </body>
