--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
         <video playsinline autoplay muted loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop" controls="true">
             <!--DESKTOP-->
             <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mp4" type="video/mp4" media="(min-width:1024px)">
+            <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mov" type="video/mov" media="(min-width:1024px)">
             <!--MOBILE-->
             <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type="video/mp4" media="(max-width:480px)">
+            <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mov" type="video/mov" media="(max-width:480px)">
 
         </video>
 
