Neuer Versuch, um Video auf iOS zum Laufen zu bringen.

--- a/index.html
+++ b/index.html
@@ -73,14 +73,10 @@
         </div>
         <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera_LQ.jpg">
 
-
-        <video playsinline autoplay muted loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop" controls="true">
-            <!--DESKTOP-->
-            <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mp4" type="video/mp4" media="(min-width:1024px)">
-            <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.mov" type="video/mov" media="(min-width:1024px)">
-            <!--MOBILE-->
-            <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type="video/mp4" media="(max-width:480px)">
-            <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mov" type="video/mov" media="(max-width:480px)">
+<!-- BACKGROUND VIDEO -->
+        <video playsinline autoplay loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop" controls="true">
+            <source src="assets/videos/Zeus-Hera_Snippet_720p_mobile_25fps.mp4" type="video/mp4" media="(min-width:1024px)">
+          
 
         </video>
 
