--- a/index.html
+++ b/index.html
@@ -71,15 +71,17 @@
             </div>
 
         </div>
-        <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera_LQ.jpg">
 
-<!-- BACKGROUND VIDEO -->
-        <video playsinline autoplay loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop" controls="true">
-            <source src="assets/videos/Zeus-Hera_Snippet_720p_mobile_25fps.mp4" type="video/mp4" media="(min-width:1024px)">
-          
 
-        </video>
+        <!-- BACKGROUND VIDEO -->
+        <div id="either-gif-or-video">
 
+            <video playsinline muted autoplay loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop">
+                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
+                <img class="vid-placeholder" src="assets/img/gifs/Zeus_Hera.gif">
+
+            </video>
+        </div>
 
     </main>
     <footer class="flex flex-column flex-align-center fixed">
