--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         <div id="either-gif-or-video">
 
             <video playsinline muted autoplay loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop">
-                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
+                <!--<source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>-->
+                <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.webm" type="video/webm">
                 <img class="vid-placeholder" src="assets/img/gifs/Zeus_Hera.gif">
 
             </video>
