--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         <!-- BACKGROUND VIDEO -->
         <div id="either-gif-or-video">
 
-            <video playsinline muted autoplay loop poster="assets/img/fotos/Zeus-Hera_LQ.jpg" id="bgvid" class="desktop">
-                <!--<source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>-->
-                <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile.webm" type="video/webm">
+            <video playsinline muted autoplay loop poster="assets/img/fotos/Zeus-Hera-Poster.jpg" id="bgvid" class="desktop">
+                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.mp4" type='video/mp4; codecs="avc1.4D401E, mp4a.40.2"'>
+                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
+                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>
                 <img class="vid-placeholder" src="assets/img/gifs/Zeus_Hera.gif">
 
             </video>
