Added controls to video player.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- BACKGROUND VIDEO -->
         <div id="either-gif-or-video">
 
-            <video playsinline muted autoplay loop poster="assets/img/fotos/Zeus-Hera-Standbild.jpg" id="bgvid" class="desktop">
+            <video controls playsinline muted autoplay loop poster="assets/img/fotos/Zeus-Hera-Standbild.jpg" id="bgvid" class="desktop">
                 <source src="assets/videos/Zeus-Hera_Snippet_360p_mobile.mp4" type="video/mp4">
                 <!--<source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
                 <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>
