--- a/index.html
+++ b/index.html
@@ -75,14 +75,16 @@
 
         <!-- BACKGROUND VIDEO -->
         <div id="either-gif-or-video">
+            <img class="vid-placeholder" src="assets/img/gifs/Zeus_Hera.gif">
 
             <video autoplay muted loop playsinline poster="assets/img/fotos/Zeus-Hera-Standbild.jpg" id="bgvid" class="desktop">
                 <source src="assets/videos/Zeus-Hera_Snippet_360p_mobile.mp4" type="video/mp4">
                 <!--<source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
-                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>
-                <img class="vid-placeholder" src="assets/img/gifs/Zeus_Hera.gif">-->
+                <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>-->
+                
 
             </video>
+            
         </div>
 
     </main>
