Anscheinend unterstützt iOS nicht den Opacity-Tag. EIn kleiner Workaround (z-index und Reihenfogle in HTML)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <main>
         <div class="start flex flex-justify-center flex-align-center">
-            <!--<div class="overlay"></div>-->
+            <div class="overlay"></div>
             <div class="logo-grp flex flex-column flex-align-center flex-justify-center">
                 <img class="logo" alt="Theater zur blauen Stunde (Logo)" src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png" srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
                 <div class="cta-btns flex">
