--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     </header>
     <main>
         <div class="start flex flex-justify-center flex-align-center">
-            <div class="overlay"></div>
             <div class="logo-grp flex flex-column flex-align-center flex-justify-center">
                 <img class="logo" alt="Theater zur blauen Stunde (Logo)" src="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@512.png" srcset="assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@1k.png 2x, assets/img/logo/F_Segno_Siegel-des-Laufs-der-Welt@2k.png 4x">
                 <div class="cta-btns flex">
@@ -73,12 +72,12 @@
         </div>
 
 
-        <!-- BACKGROUND VIDEO -->
+        <!-- BACKGROUND VIDEO --> 
         
-            <img class="vid-placeholder" src="assets/img/fotos/Zeus-Hera-Poster.jpg">
+            <img class="vid-placeholder" src="assets/img/fotos/Blaues-Gewoelbe_Standbild.jpg">
 
-            <video autoplay muted loop playsinline poster="assets/img/fotos/Zeus-Hera-Standbild.jpg" id="bgvid" class="desktop">
-                <source src="assets/videos/Zeus-Hera_Snippet_360p_mobile.mp4" type="video/mp4">
+            <video autoplay muted loop playsinline controls="false" poster="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg" id="bgvid" class="desktop">
+                <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile_blue.mp4" type="video/mp4">
                 <!--<source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
                 <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>-->
                 
