--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         
             <img class="vid-placeholder" src="assets/img/fotos/Blaues-Gewoelbe_Standbild.jpg">
 
-            <video autoplay muted loop playsinline controls="false" poster="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg" id="bgvid" class="desktop">
+            <video autoplay muted loop playsinline poster="assets/img/fotos/Zeus-Hera-Standbild_blue.jpg" id="bgvid" class="desktop">
                 <source src="assets/videos/Zeus-Hera_Snippet_1080p_mobile_blue.mp4" type="video/mp4">
                 <!--<source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.ogv" type='video/ogg; codecs="theora, vorbis"'>
                 <source src="assets/videos/Zeus-Hera_Snippet_480p_mobile.webm" type='video/webm;codecs="vp8, vorbis"'>-->
