--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="assets/CSS/burger.css">
     <link rel="stylesheet" href="assets/CSS/text-flex.css">
     <link rel="stylesheet" href="assets/CSS/styles.css">
+    
+    <link href="https://fonts.googleapis.com/css?family=Abel|Josefin+Sans|Muli|Quicksand|Roboto|Source+Sans+Pro&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="57x57" href="segno.ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="segno.ico/apple-icon-60x60.png">
