Andere Fonteinstellungen für Tablet und höher.

--- a/ueber/index.html
+++ b/ueber/index.html
@@ -77,9 +77,16 @@
                 <div class="col-txt">
                     <section>
                         <h2>Was ist das Theater zur blauen Stunde?</h2>
-                        <p>Hinter dem Aufbau eines Laienfeuertheaterkollektivs steckt die Idee, eine Plattform zu schaffen, durch die künstlerisch interessierte Menschen aus verschiedensten Bereichen, unabhängig vom Grad ihrer Professionalität, zusammenkommen können, gemeinsam und auf Augenhöhe an einem Werk arbeiten können und untereinander von individuellen Fähigkeiten profitieren können, indem diese sich in der Arbeit ergänzen sowie bei Bedarf und Wunsch untereinander in kostenfreien Workshops weitergegeben werden.
+                        <p>Hinter dem Aufbau eines Laienfeuertheaterkollektivs steckt die Idee, eine Plattform zu schaffen<br>
+                            <ul>
+                                <li>durch die künstlerisch interessierte Menschen aus verschiedensten Bereichen zusammenkommen können</li>
+                                <li>unabhängig vom Grad ihrer Professionalität</li>
+                                <li>gemeinsam und auf Augenhöhe an einem Werk arbeiten können</li>
+                                <li>untereinander von individuellen Fähigkeiten profitieren können</li>
+                                <li>indem diese sich in der Arbeit ergänzen sowie bei Bedarf und Wunsch untereinander in kostenfreien Workshops weitergegeben werden.</li>
+                            </ul>
                             <br>Die Tätigkeit im Verein soll erfahrbar machen, dass bedeutsame Werke der Kunst und Kultur auch ohne kommerzielle Beweggründe von Menschen für Menschen geschaffen werden können.
-                        </p>
+                       
                         <div class="flex flex-row flex-justify-end">
                             <a class="btn text-uppercase" tag="projects" href="/kontakt">Mitmachen!</a>
                         </div>
@@ -95,7 +102,7 @@
                 <div class="col-txt">
                     <section>
                         <h2>Woran arbeiten wir?</h2>
-                        <p>Wir arbeiten momenten an <span>Aus der Asche - eine Feueroper</span>.
+                        <p>Wir arbeiten momenten an<br> <span>Aus der Asche - eine Feueroper</span>.
                             <br> Nachdem wir bereits im November 2019 eine kleine Testaufführung vor Freunden und Familie auf die Beine stellen konnten, peilen wir eine große Aufführung im Sommer 2020 an.
                         </p>
                         <div class="flex flex-row flex-justify-end">
