Added flaming hover state for social media icons

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <input id="burger" type="checkbox" />
 
         <label for="burger">
+            
             <span></span>
             <span></span>
             <span></span>
@@ -93,15 +94,30 @@
     </main>
     <footer class="flex flex-column flex-align-center fixed">
         <div class="icon-bar">
-            <a target="_blank" tag="fb-social-icon" href="">
-                <img class="social-icons" title="facebook-social-icon" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-White_72.png">
-            </a>
-            <a target="_blank" tag="yt-social-icon" href="">
-                <img class="social-icons" title="youtube-social-icon" alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
-            </a>
-            <a target="_blank" tag="ig-social-icon" href="">
-                <img class="social-icons" title="instagram-social-icon" alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
-            </a>
+            <div class="icon">
+                <img class="flame-hover fb" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <a target="_blank" tag="fb-social-icon" href="">
+                    <img class="social-icons fb" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-White_512.png">
+                    <img class="social-icons fb gold" alt="facebook-social-icon" src="assets/img/facebook/f_logo_RGB-Gold_512.png">
+                </a>
+            </div>
+
+            <div class="icon">
+                <img class="flame-hover yt" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <a target="_blank" tag="yt-social-icon" href="">
+                    <img class="social-icons yt"  alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_dark.png">
+                    <img class="social-icons yt gold"  alt="youtube-social-icon" src="assets/img/youtube/yt_icon_mono_gold.png">
+                </a>
+            </div>
+
+            <div class="icon">
+                <img class="flame-hover ig" alt="flame-hover" src="assets/img/gifs/Flamme_Icon_Hover.gif">
+                <a target="_blank" tag="ig-social-icon" href="">
+                    <img class="social-icons ig"  alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_white.png">
+                    <img class="social-icons ig gold"  alt="instagram-social-icon" src="assets/img/instagram/IG_Glyph_gold.png">
+                </a>
+            </div>
+
         </div>
         <div class="imprint flex flex-row flex-justify-center text-uppercase text-letterspace flex-wrap">
             <div class="flex flex-row flex-wrap">
